# Lawn_Sensor

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml
backend/: nodemon.json  package.json  router.js  server.js  util.js
backend/src/: generateOutputFrames.js  router.js  util.js
backend/src/api/: generateImages.js  generateOutputFrames.js  loadGPS.js
backend/src/routes/: router.js
backend/src/utils/: utils.js
frontend/: frontend-server.js  index.html
frontend/css/: styles.css  upload.css
frontend/js/: imageDisplay.js  processData.js  script.js  uploadVideo.js
frontend/js/data/: data.json
frontend/js/upload/: GenerateImages.js  initImageDisplay.js  loadGPS.js  updateImages.js
py/: 2ndTestSelect.html  pyTest6.py  wild_garlic.py
python/: app.py  blueviolets_with_colors.py  broadleaf_plantains_color_filter.py  pyTest6.py  virginiacreeper.py
python/src/: commonivy.py  dandelions.py  japanese_honeysuckle.py  leaves.py  virginiacreeper.py  wild_garlic.py
