[project]
name = "lawn_sensor"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Merrick Cai", email = "merrickcai.dev@gmail.com"},
]
dependencies = ["numpy>=2.2.4", "pillow>=11.2.1", "opencv-python>=4.11.0.86", "scipy>=1.15.2", "matplotlib>=3.10.1", "ultralytics>=8.3.23"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
dev = "python python/app.py"

[tool.pdm]
distribution = false
